Fix alignment for responsive home image

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -4,6 +4,7 @@
   align-items: center;
   overflow: hidden;
   padding-top: 30px;
+  min-height: 30%;
   h1 {
     color: $black;
     font-size: 42px;
